<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.splashscreen.Splashscreen">

    <ImageView
        android:layout_gravity="center_vertical|center_horizontal"
        android:src="@drawable/ic_to_do_list_bro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />
    <androidx.appcompat.widget.AppCompatTextView
        android:textAlignment="center"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:textAlignment="center"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/judul"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>